@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,31 +20,10 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
+import java.lang.instrument.*;
 
-/*
- * @test TestPrintGCDetailsVerbose
- * @bug 8016740
- * @summary Tests that jvm with maximally verbose GC logging does not crash when ParOldGC has no memory
- * @key gc
- * @requires vm.gc=="Parallel" | vm.gc=="null"
- * @library /testlibrary
- * @run main/othervm -Xmx50m -XX:+UseParallelGC -Xlog:gc*=trace TestPrintGCDetailsVerbose
- */
-public class TestPrintGCDetailsVerbose {
-
-    public static void main(String[] args) {
-        for (int t = 0; t <= 10; t++) {
-            byte a[][] = new byte[100000][];
-            try {
-                for (int i = 0; i < a.length; i++) {
-                    a[i] = new byte[100000];
-                }
-            } catch (OutOfMemoryError oome) {
-                a = null;
-                System.out.println("OOM!");
-                continue;
-            }
-        }
+public class SimpleJvmtiAgent {
+    public static void agentmain(String agentArgs, Instrumentation instrumentation) {
+        System.out.println("attach succeeded (args: \"" + agentArgs + "\")");
     }
 }
-
